style.css
/* BASIC RESET */
*, *::before, *::after {
  margin: 0;
  padding: 0;
}

body,
html {
  font-size: 16px;
  font-family: 'Breamcatcher', sans-serif;
  /* background-color: #7ed6df; */
}

/* CONTAINER */

.container {
  min-height: 100vh;
  width: 100%;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  overflow-x: hidden;
}

.container video {
  width: 100%;
  min-height: 100%;
  height: 100%;
  object-fit: cover;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
}

/* LOGO */
.heading img {
  max-width: 200px;
  height: auto;
  z-index: 10;
}

/* HEADING */
.heading {
  display: flex;
  justify-content: center;
  margin: 2rem 0;
  height: auto;
}

/* POLAROIDS */
.polaroids {
  text-align: center;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  margin: 2rem;
}

.polaroid-img {
  margin-bottom: 1rem;
  width: 250px;
}

.polaroid-item {
  height: 100%;
  background: white;
  display: inline-block;
  text-decoration: none;
  font-size: 18px;
  padding: 10px;
  margin: 2rem;
  max-width: 300px;
  -moz-box-shadow: 0px 1px 5px 0px #656565;
  -webkit-box-shadow: 0px 1px 5px 0px #656565;
  -o-box-shadow: 0px 1px 5px 0px #656565;
  box-shadow: 0px 1px 5px 0px #656565;
  -webkit-transform: rotate(-3deg);
  -moz-transform: rotate(-3deg);
  -o-transform: rotate(-3deg);
  transform: rotate(-1deg);

  -webkit-transition: all .5s ease-in-out;
  -moz-transition: all .5s ease-in-out;
  -ms-transition: all .5s ease-in-out;
  -o-transition: all .5s ease-in-out;
  transition: all .5s ease-in-out;

  -moz-opacity: 0.85;
  -khtml-opacity: 0.85;
  opacity: 0.85;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha"(Opacity=85);
  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=85);
  filter: alpha(opacity=85);
}

.polaroid-item-bis {
  height: 100%;
  background: white;
  display: inline-block;
  text-decoration: none;
  font-size: 18px;
  padding: 10px;
  margin: 2rem;
  max-width: 250px;
  -moz-box-shadow: 0px 1px 5px 0px #656565;
  -webkit-box-shadow: 0px 1px 5px 0px #656565;
  -o-box-shadow: 0px 1px 5px 0px #656565;
  box-shadow: 0px 1px 5px 0px #656565;
  -webkit-transform: rotate(1deg);
  -moz-transform: rotate(1deg);
  -o-transform: rotate(1deg);
  transform: rotate(1deg);

  -webkit-transition: all .5s ease-in-out;
  -moz-transition: all .5s ease-in-out;
  -ms-transition: all .5s ease-in-out;
  -o-transition: all .5s ease-in-out;
  transition: all .5s ease-in-out;

  -moz-opacity: 0.85;
  -khtml-opacity: 0.85;
  opacity: 0.85;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha"(Opacity=85);
  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=85);
  filter: alpha(opacity=85);
}

/* PIRATE */
.pirate img {
  max-width: 180px;
}

/* ANIMATIONS */
.polaroid-item:hover {
  -moz-opacity: 1;
  -khtml-opacity: 1;
  opacity: 1;
  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha"(Opacity=100);
  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
  filter:alpha(opacity=100);
  -webkit-transform: rotate(1deg);
  -moz-transform: rotate(1deg);
  -o-transform: rotate(1deg);
  transform: rotate(1deg);
  filter: sepia(40%);
}

.polaroid-item-bis:hover {
  -moz-opacity: 1;
  -khtml-opacity: 1;
  opacity: 1;
  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha"(Opacity=100);
  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
  filter:alpha(opacity=100);
  -webkit-transform: rotate(-1deg);
  -moz-transform: rotate(-1deg);
  -o-transform: rotate(-1deg);
  transform: rotate(-1deg);
  filter: sepia(40%);
}

/* WRITTEN CONTENT */
.polaroid-title {
  font-family: 'Breamcatcher', sans-serif;
  font-size: 2rem;
}

span {
  font-size: 1.4rem;
}

.polaroid-job {
  font-family: 'Englebert';
  /* margin: .5rem; */
  /* font-weight: 800; */
  line-height: 1.3;
  margin-top: 1rem;
}

.polaroid-functions {
  font-family: 'Englebert';
  line-height: 1.3;
  font-style: italic;
  font-size: 1.2rem;
}

.span-divider {
  margin-bottom: .8rem;
}

.p-divider {
  margin-bottom: 1rem;
}

.polaroid-list-item {
  list-style-type: none;
  color: #656565;
  font-family: 'Englebert';
  padding-bottom: 8px;
  line-height: 1.1;
  font-size: 1.2rem;
}

/* FOOTER */
footer {
  position: absolute;
  bottom: 0;
  right: 0;
  z-index: 3;
  padding: 3rem;
}

